--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Control de alcohol</title>
  
 </head>
 <body>
-
+    <div class="call">
     <h1>¿¡Que tal estoy!?</h1>
+    </div>
          <h2>Si bebiste, no tomes malas decisiones, nosotros te ayudamos con eso</h2>
 
          <li>Que tan borracho estoy, cuestionario simple, cortito y al pie</li>
