--- a/index.html
+++ b/index.html
@@ -1,26 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
     <title>Control de alcohol</title>
- 
+
 </head>
+
 <body>
     <div class="call">
-    <h1>¿¡Que tal estoy!?</h1>
+        <h1>¿¡Que tal estoy!?</h1>
     </div>
-         <h2>Si bebiste, no tomes malas decisiones, nosotros te ayudamos con eso</h2>
+    <h2>Si bebiste, no tomes malas decisiones, nosotros te ayudamos con eso</h2>
 
-         <li>Que tan borracho estoy, cuestionario simple, cortito y al pie</li>
-         <li>¡Cual es tu porcentaje de borracho?</li>
-         <li>Juguemos un poquito</li>
+    <li>Que tan borracho estoy, cuestionario simple, cortito y al pie</li>
+    <li>¡Cual es tu porcentaje de borracho?</li>
+    <li>Juguemos un poquito</li>
+    <button onclick="juego()" id="juego">Comencemos!!!!!</button>
+
+    <div id="formulario">
+
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+    <button onclick="inicio()" id="inicio">Grabar jugador</button>
+    <button onclick="resultado()" id="resultado">Resultado</button>
+    <button onclick="limpiar()" id="limpiar">Borrar datos</button>
+
+
+
+    <div id="gr">
+
+    </div>
+
 
     <script src="mai.js"></script>
-    
 
 
-   
+
+
 </body>
-</html>  
+
+</html>
