--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <button onclick="inicio()" id="inicio">Grabar jugador</button>
     <button onclick="resultado()" id="resultado">Resultado</button>
     <button onclick="limpiar()" id="limpiar">Borrar datos</button>
+    <button onclick="traigoLista()" id="lista">Lista de bebidas</button>
 
 
 
@@ -40,6 +41,7 @@
 
 
     <script src="mai.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
 
